--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 Progetto realizzato da Siri Filippo (matricola 4819642) e Stana Claudio (matricola 4819653)
+
+Si segnala che la sintassi dei comandi prevede la presenza di uno spazio prima e dopo il simbolo |
