--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-Progetto realizzato da Siri Filippo (matricola 4819642) e Stana Claudio (matricola 4819653)
+# µBash
+Progetto universitario realizzato da me ed un mio compagno di corso per l'esame di sistemi di elaborazione e trasmissione dell'informazione. \
+Veniva richiesto di implementare una shell molto semplificata che implementasse i vari comandi tramite chiamate di sistema ed il comando `cd` built-in.
 
 Si segnala che la sintassi dei comandi prevede la presenza di uno spazio prima e dopo il simbolo |
